fix signup page title being too large on very small screens

--- a/client/src/components/form-input.styles.scss
+++ b/client/src/components/form-input.styles.scss
@@ -15,7 +15,7 @@
     padding-bottom: .5rem;
     padding-top: 1.2rem;
     width: 100%;
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     border: none;    
     border-bottom: .1rem solid black;
     margin-bottom: 4rem;
@@ -35,7 +35,7 @@
     top: .6rem;
     left: .1rem;
     color: rgb(160, 160, 160);
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     pointer-events: none;
     transition: all .3s ease;
   }
