--- a/client/src/components/signup.styles.scss
+++ b/client/src/components/signup.styles.scss
@@ -1,7 +1,7 @@
 .sign-up-page {
   display: flex;
   justify-content: center;
-  margin-top: 6rem;
+  margin-top: 0;
 
   .custom-button {
     width: 50%;
@@ -31,6 +31,7 @@
     align-self: center;
     color: #00283a;
     margin-bottom: 6rem;
+    font-size: 2.75rem;
   }
   
   .buttons-container {
@@ -61,6 +62,8 @@
 
 @media screen and (min-width: 600px) {
   .sign-up-page {
+    margin-top: 6rem;
+
     .content-container {
       width: 48rem;
       border: .1rem solid #e6e6e6;
